cgt-macros/tests/trybuild/failures/cgt_test_path_attr.stderr
error: This macro doesn't use any attribute
 --> tests/trybuild/failures/cgt_test_path_attr.rs:1:34
  |
1 | #[cgt_macros::cgt_test_with_path(attribute)]
  |                                  ^^^^^^^^^
