cgt-macros/tests/trybuild/failures/cgt_test_path_attr.rs
#[cgt_macros::cgt_test_with_path(attribute)]
fn test(_: &std::path::Path) -> Result<(), cgt_core::TestError> {
    Ok(())
}

fn main() {}
